# AXRU

./: .agent.md
Axiomate/: ARCHITECTURE.md  AxiomaticrulesVX.md  DAY1_TICKETS.md  HANDOVER_REPORT.md  MVP_SCOPE.md  NEXT_AGENT_PROMPTS.md  REPO_PLACEMENT.md  SPRINT_BOARD_2W.md  UI_A11Y_COMPLIANCE_PASS.md  UI_IMPLEMENTATION_CUT_PLAN.md  UI_MOCKUPS_HANDOFF.html  UI_MOCKUPS_REVIEW_HANDOVER.md  UI_MOCKUP_TO_SPEC_GAP_LOG.md  UI_SCREEN_BEHAVIOR_CONTRACT.md  UI_SPEC_AXIOMATE_EXPLORER_MVP.md
crates/axiomate-explorer-core/: Cargo.toml
crates/axiomate-explorer-core/src/: lib.rs
crates/ruvector-attention-node/npm/win32-x64-msvc/: attention.win32-x64-msvc.node
crates/ruvector-gnn-node/npm/darwin-arm64/: ruvector-gnn.darwin-arm64.node
crates/ruvector-gnn-node/npm/darwin-x64/: ruvector-gnn.darwin-x64.node
crates/ruvector-graph-transformer-node/npm/darwin-x64/: ruvector-graph-transformer.darwin-x64.node
crates/rvf/rvf-node/npm/darwin-arm64/: rvf-node.darwin-arm64.node
tests/axiomate-explorer/fixtures/: conflicting-definitions.md  sample-policy.md  sample-swebok.txt
ui/axiomate-explorer/: index.html  package.json  tsconfig.json
ui/axiomate-explorer/src/: main.ts  styles.css
ui/axiomate-explorer/src/contracts/: generated-types.ts
