[package]
name = "axiomate-explorer-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Axiomate Explorer runtime adapter for graph assembly, validation, repair, and attestation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"

[dev-dependencies]


[workspace]
